--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import Main from "../layouts/Main.astro";
+import Layout from "../layouts/Layout.astro";
+import Skills from "../components/content/Skills.astro";
 ---
 
-<Main>
-  <main></main>
-</Main>
+<Layout>
+  <Skills />
+</Layout>
